<resources>
    <string name="app_name">Gift list</string>

    <string name="my_list">Mes listes</string>
    <string name="followed_list">Listes suivis</string>
    <string name="followed_amount">Suivie par</string>
    <string name="placeholder_newlist">Nom de la liste</string>
    <string name="placeholder_newgift">Nom du cadeau</string>
    <string name="placeholder_urlgift">Lien d\'exemple</string>
    <string name="newgift_btntext">Ajouter un cadeau</string>

    <string name="missing_namegift">Vous devez renseigner au moins un nom</string>
    <string name="missing_namelist">Vous devez renseigner au moins un nom</string>

    <string name="create_list">Créer une liste</string>
    <string name="copy">Copier la référence</string>
    <string name="person">personne</string>
    <string name="persons">personnes</string>
    <string name="copy_done">Référence liste copié</string>
    <string name="delete">Supprimer</string>
    <string name="getgift">Je le prends</string>
    <string name="getgift_cancel">Je ne le prends plus</string>
    <string name="get_by">Pris par</string>

    <!-- FirebaseAuth message -->
    <string name="fireauth_connection_ok">Connexion à la base de données OK!</string>
    <string name="fireauth_connection_fail">Impossible de charger les données!</string>
    <string name="fireauth_create_user">Votre profil a correctement été créé</string>
    <string name="fireauth_load_list_error">Impossible de charger vos listes!</string>

    <!-- SignIn activity text -->
    <string name="signin_welcome">Bienvenue dans Gift List</string>
    <string name="signin_text">Pour utiliser l\'application et enregistrer des listes, veuillez vous connecter avec votre compte google.
    </string>
    <string name="signin_error">Impossible de contacter le serveur, vérifiez votre connexion internet ou réessayez plus tard.</string>
</resources>
