<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/giftName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/placeholder_newgift"
        android:inputType="text"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/giftAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="1"
        android:inputType="number"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/giftUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/placeholder_urlgift"
        android:inputType="text"
        android:maxLines="1"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/savegift_btn"
        android:src="@drawable/ic_check_white_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/create_list"
        android:layout_margin="20dp"
        android:tint="@android:color/white"
        android:clickable="true"/>

</LinearLayout>