<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/listId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/listName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/placeholder_newlist"
            android:inputType="text"
            android:maxLines="1"/>

        <Button
            android:id="@+id/btnAddGift"
            android:text="@string/newgift_btntext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ListView
            android:id="@+id/myNewlist_gistList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:longClickable="true"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/savelist_btn"
        android:src="@drawable/ic_check_white_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:contentDescription="@string/create_list"
        android:layout_margin="20dp"
        android:tint="@android:color/white"
        android:clickable="true"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>